cooking with gas. appended the row

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+        <ul id="timeblocks"></ul>
       <!-- Timeblocks go here -->
     </div>
     <script src="script.js"></script>
