--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <ul id="timeblocks"></ul>
       <!-- Timeblocks go here -->
     </div>
+    <script src="moment.js"></script>
     <script src="script.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
