--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       rel="stylesheet"
     />
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" 
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+
+
+
+
     <title>Work Day Scheduler</title>
   </head>
 
@@ -34,9 +40,11 @@
       <!-- Timeblocks go here -->
     </div>
     <script src="moment.js"></script>
-    <script src="script.js"></script>
     
+    <script src="script.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+
+</body>
 </html>
