trying to get block to change.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p id="clearbutton"> </p>
     </header>
     <div class="container">
-        <ul id="timeblocks"></ul>
+        <ul id="time-block"></ul>
       <!-- Timeblocks go here -->
     </div>
     <script src="moment.js"></script>
